--- a/PixivAss/Properties/Resources.resx
+++ b/PixivAss/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="NotFav" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\NotFav.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="baseIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\baseIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
